[gd_scene load_steps=13 format=2]

[ext_resource path="res://character_sprites/villain.png" type="Texture" id=1]
[ext_resource path="res://shaders/trip.shader" type="Shader" id=2]
[ext_resource path="res://utils/trippy.png" type="Texture" id=3]
[ext_resource path="res://fonts/Kenney Mini.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://fonts/Kenney Mini Square.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://scripts/CharacterIntro.gd" type="Script" id=6]
[ext_resource path="res://audio/ALERT_Appear.wav" type="AudioStream" id=7]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 2 )
shader_param/color = null

[sub_resource type="Shader" id=2]
code = "shader_type canvas_item;

uniform float amount : hint_range(0, 1) = 0.0;

void fragment() {
    COLOR.a = max(0.0, min(1.0, 1.0 - amount + UV.x - mix(0.0, 1.0, amount)));
}"

[sub_resource type="ShaderMaterial" id=3]
shader = SubResource( 2 )
shader_param/amount = 0.522

[sub_resource type="DynamicFont" id=4]
size = 48
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=5]
size = 28
font_data = ExtResource( 4 )

[node name="CharacterIntro" type="Node2D"]
script = ExtResource( 6 )

[node name="Background" type="Sprite" parent="."]
material = SubResource( 1 )
position = Vector2( 813.127, 305.129 )
scale = Vector2( 1.54377, 1.50855 )
texture = ExtResource( 3 )

[node name="Character" type="KinematicBody2D" parent="."]
position = Vector2( -367.573, 352.176 )
scale = Vector2( 2.20952, 2.04458 )
__meta__ = {
"_edit_group_": true
}

[node name="character-sprite" type="Sprite" parent="Character"]
texture = ExtResource( 1 )

[node name="NameContainer" type="ColorRect" parent="."]
material = SubResource( 3 )
margin_left = 642.54
margin_top = 481.317
margin_right = 1253.54
margin_bottom = 689.317
color = Color( 0.0470588, 0.0470588, 0.0470588, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="NameContainer"]
margin_left = 26.612
margin_top = 24.5649
margin_right = 146.612
margin_bottom = 84.5649
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.988235, 0.976471, 0.976471, 1 )
text = "Zong"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Subtitle" type="Label" parent="NameContainer"]
margin_left = 29.6826
margin_top = 90.0714
margin_right = 69.6826
margin_bottom = 104.071
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.639216, 0.117647, 0.117647, 1 )
text = "The fabulous destroyer"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Position" type="Position2D" parent="."]
position = Vector2( 261.152, 476.488 )

[node name="LabelEndPosition" type="Position2D" parent="."]
position = Vector2( 643.651, 483.893 )

[node name="Tween" type="Tween" parent="."]

[node name="Alert" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="PositionSlow" type="Position2D" parent="."]
position = Vector2( 342.887, 472.752 )
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="finished" from="Alert" to="." method="_on_Alert_finished"]
